[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/binding_list.tscn" type="PackedScene" id=2]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wd_menu" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.5
margin_top = -222.5
margin_right = 226.5
margin_bottom = 222.5

[node name="b_options" type="Button" parent="wd_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.5
margin_top = 6.0
margin_right = 31.5
margin_bottom = 26.0
text = "Options"

[node name="b_disconnect" type="Button" parent="wd_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.5
margin_top = 33.0
margin_right = 42.5
margin_bottom = 53.0
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pu_binding_list" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.5
margin_top = -188.0
margin_right = 156.5
margin_bottom = 188.0
[connection signal="pressed" from="wd_menu/b_options" to="." method="_on_b_options_pressed"]
[connection signal="pressed" from="wd_menu/b_disconnect" to="." method="_on_b_disconnect_pressed"]
[connection signal="popup_hide" from="pu_binding_list" to="." method="_on_pu_binding_list_popup_hide"]
